# kafka-flink-crypto

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile  requirements.txt
docker/flink/: Dockerfile
docker/kafka/: Dockerfile
src/kafka_flink_crypto/: binance_websocket.py  kafka_producer.py  logger.py
