[project]
name = "kafka-flink-crypto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chubukovmn", email = "ay.ya@ya.ru"},
]
dependencies = [
    "websocket-client>=1.8.0"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
